// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scayle integration getCategory by slug 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "id": "3",
          "name": "Shirts",
          "products": [],
          "showInMenu": true,
          "slug": "shirts",
        },
      ],
      "id": "2",
      "name": "Bekleidung",
      "products": [],
      "showInMenu": true,
      "slug": "bekleidung",
    },
    {
      "children": [],
      "id": "4",
      "name": "Hosen",
      "products": [],
      "showInMenu": true,
      "slug": "hosen",
    },
    {
      "children": [],
      "id": "5",
      "name": "Schuhe",
      "products": [],
      "showInMenu": true,
      "slug": "schuhe",
    },
  ],
  "id": "1",
  "name": "Männer",
  "products": [
    {
      "categories": [
        {
          "children": [],
          "id": "3",
          "image": undefined,
          "name": "Damen",
          "products": [],
          "showInMenu": true,
          "slug": undefined,
        },
      ],
      "id": "1",
      "longDescription": "",
      "name": "Leviz T-Shirt",
      "shortDescription": "",
      "slug": "LEV0074002000005",
      "variants": [
        {
          "attributes": undefined,
          "id": "31",
          "images": [
            {
              "url": "https://example/file/images/68bf124a0517bffaa5fe1dc7ac8707db.jpg?brightness=0.96&quality=75&trim=1&height=1067&width=800",
            },
          ],
          "listPrice": "€2,990.00",
          "salePrice": "€2,990.00",
          "sku": "LEV0074002000005_S",
        },
      ],
    },
  ],
  "showInMenu": true,
  "slug": "maenner",
}
`;

exports[`scayle integration getCategoryTree 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [],
            "id": "3",
            "name": "Shirts",
            "products": [],
            "showInMenu": true,
            "slug": "shirts",
          },
        ],
        "id": "2",
        "name": "Bekleidung",
        "products": [],
        "showInMenu": true,
        "slug": "bekleidung",
      },
      {
        "children": [],
        "id": "4",
        "name": "Hosen",
        "products": [],
        "showInMenu": true,
        "slug": "hosen",
      },
      {
        "children": [],
        "id": "5",
        "name": "Schuhe",
        "products": [],
        "showInMenu": true,
        "slug": "schuhe",
      },
    ],
    "id": "1",
    "name": "Männer",
    "products": [],
    "showInMenu": true,
    "slug": "maenner",
  },
]
`;

exports[`scayle integration getProduct by ID 1`] = `
{
  "categories": [
    {
      "children": [],
      "id": "3",
      "image": undefined,
      "name": "Damen",
      "products": [],
      "showInMenu": true,
      "slug": undefined,
    },
  ],
  "id": "1",
  "longDescription": "",
  "name": "Leviz T-Shirt",
  "shortDescription": "",
  "slug": "LEV0074002000005",
  "variants": [
    {
      "attributes": undefined,
      "id": "31",
      "images": [
        {
          "url": "https://example/file/images/68bf124a0517bffaa5fe1dc7ac8707db.jpg?brightness=0.96&quality=75&trim=1&height=1067&width=800",
        },
      ],
      "listPrice": "€2,990.00",
      "salePrice": "€2,990.00",
      "sku": "LEV0074002000005_S",
    },
  ],
}
`;

exports[`scayle integration getProducts by IDs 1`] = `
[
  {
    "categories": [
      {
        "children": [],
        "id": "7",
        "image": undefined,
        "name": "Herren",
        "products": [],
        "showInMenu": true,
        "slug": undefined,
      },
    ],
    "id": "1",
    "longDescription": "",
    "name": "Helfeger Shirt",
    "shortDescription": "",
    "slug": "THS0906008000001",
    "variants": [
      {
        "attributes": undefined,
        "id": "1",
        "images": [
          {
            "url": "https://example/file/cd81a5d37e4241686586812d9e179553?bg=F4F4F5&quality=75&trim=1&height=1067&width=800",
          },
        ],
        "listPrice": "€3,990.00",
        "salePrice": "€3,990.00",
        "sku": "THS0906008000001_S",
      },
    ],
  },
  {
    "categories": [
      {
        "children": [],
        "id": "7",
        "image": undefined,
        "name": "Herren",
        "products": [],
        "showInMenu": true,
        "slug": undefined,
      },
    ],
    "id": "2",
    "longDescription": "",
    "name": "Helfeger Shirt",
    "shortDescription": "",
    "slug": "THS0906006000001",
    "variants": [
      {
        "attributes": undefined,
        "id": "4",
        "images": [
          {
            "url": "https://example/file/8de1d6ebb091d7363a05bcf99a0095f3?quality=75&height=1067&width=800",
          },
        ],
        "listPrice": "€3,990.00",
        "salePrice": "€3,990.00",
        "sku": "THS0906006000001_S",
      },
    ],
  },
]
`;

exports[`scayle integration getProducts by categories - paginated 1`] = `
[
  {
    "categories": [
      {
        "children": [],
        "id": "3",
        "image": undefined,
        "name": "Damen",
        "products": [],
        "showInMenu": true,
        "slug": undefined,
      },
    ],
    "id": "1",
    "longDescription": "",
    "name": "Liu Jo Sandale CAMELIA",
    "shortDescription": "",
    "slug": "LIJ0480001000004",
    "variants": [
      {
        "attributes": undefined,
        "id": "40",
        "images": [
          {
            "url": "https://example/file/images/bc06c53f15b5a6634e10747378fc9eb7.png?bg=F4F4F5&quality=75&trim=1&height=1067&width=800",
          },
        ],
        "listPrice": "€32,990.00",
        "salePrice": "€32,990.00",
        "sku": "LIJ0480001000004_38",
      },
    ],
  },
  {
    "categories": [
      {
        "children": [],
        "id": "3",
        "image": undefined,
        "name": "Damen",
        "products": [],
        "showInMenu": true,
        "slug": undefined,
      },
    ],
    "id": "2",
    "longDescription": "",
    "name": "Leviz T-Shirt",
    "shortDescription": "",
    "slug": "LEV0031009000002",
    "variants": [
      {
        "attributes": undefined,
        "id": "37",
        "images": [
          {
            "url": "https://example/file/38ee8cd16ca9f4e7912ec4df24d1c753?bg=F4F4F5&quality=75&trim=1&height=1067&width=800",
          },
        ],
        "listPrice": "€2,990.00",
        "salePrice": "€2,990.00",
        "sku": "LEV0031009000002_S",
      },
    ],
  },
  {
    "categories": [
      {
        "children": [],
        "id": "3",
        "image": undefined,
        "name": "Damen",
        "products": [],
        "showInMenu": true,
        "slug": undefined,
      },
    ],
    "id": "3",
    "longDescription": "",
    "name": "Leviz T-Shirt",
    "shortDescription": "",
    "slug": "LEV0031001002000",
    "variants": [
      {
        "attributes": undefined,
        "id": "34",
        "images": [
          {
            "url": "https://example/file/6074e8f1a0b1cd81885a1769e5d0cfa1?bg=F4F4F5&quality=75&trim=1&height=1067&width=800",
          },
        ],
        "listPrice": "€2,990.00",
        "salePrice": "€2,990.00",
        "sku": "LEV0031001002000_S",
      },
    ],
  },
  {
    "categories": [
      {
        "children": [],
        "id": "3",
        "image": undefined,
        "name": "Damen",
        "products": [],
        "showInMenu": true,
        "slug": undefined,
      },
    ],
    "id": "4",
    "longDescription": "",
    "name": "Leviz T-Shirt",
    "shortDescription": "",
    "slug": "LEV0074002000005",
    "variants": [
      {
        "attributes": undefined,
        "id": "31",
        "images": [
          {
            "url": "https://example/file/images/68bf124a0517bffaa5fe1dc7ac8707db.jpg?brightness=0.96&quality=75&trim=1&height=1067&width=800",
          },
        ],
        "listPrice": "€2,990.00",
        "salePrice": "€2,990.00",
        "sku": "LEV0074002000005_S",
      },
    ],
  },
]
`;

exports[`scayle integration getProducts by category id 1`] = `
[
  {
    "categories": [
      {
        "children": [],
        "id": "3",
        "image": undefined,
        "name": "Damen",
        "products": [],
        "showInMenu": true,
        "slug": undefined,
      },
    ],
    "id": "1",
    "longDescription": "",
    "name": "Leviz T-Shirt",
    "shortDescription": "",
    "slug": "LEV0074002000005",
    "variants": [
      {
        "attributes": undefined,
        "id": "31",
        "images": [
          {
            "url": "https://example/file/images/68bf124a0517bffaa5fe1dc7ac8707db.jpg?brightness=0.96&quality=75&trim=1&height=1067&width=800",
          },
        ],
        "listPrice": "€2,990.00",
        "salePrice": "€2,990.00",
        "sku": "LEV0074002000005_S",
      },
    ],
  },
]
`;

exports[`scayle integration getProducts by keyword - paginated 1`] = `
[
  {
    "categories": [
      {
        "children": [],
        "id": "3",
        "image": undefined,
        "name": "Damen",
        "products": [],
        "showInMenu": true,
        "slug": undefined,
      },
    ],
    "id": "1",
    "longDescription": "",
    "name": "Liu Jo Sandale CAMELIA",
    "shortDescription": "",
    "slug": "LIJ0480001000004",
    "variants": [
      {
        "attributes": undefined,
        "id": "40",
        "images": [
          {
            "url": "https://example/file/images/bc06c53f15b5a6634e10747378fc9eb7.png?bg=F4F4F5&quality=75&trim=1&height=1067&width=800",
          },
        ],
        "listPrice": "€32,990.00",
        "salePrice": "€32,990.00",
        "sku": "LIJ0480001000004_38",
      },
    ],
  },
  {
    "categories": [
      {
        "children": [],
        "id": "3",
        "image": undefined,
        "name": "Damen",
        "products": [],
        "showInMenu": true,
        "slug": undefined,
      },
    ],
    "id": "2",
    "longDescription": "",
    "name": "Leviz T-Shirt",
    "shortDescription": "",
    "slug": "LEV0031009000002",
    "variants": [
      {
        "attributes": undefined,
        "id": "37",
        "images": [
          {
            "url": "https://example/file/38ee8cd16ca9f4e7912ec4df24d1c753?bg=F4F4F5&quality=75&trim=1&height=1067&width=800",
          },
        ],
        "listPrice": "€2,990.00",
        "salePrice": "€2,990.00",
        "sku": "LEV0031009000002_S",
      },
    ],
  },
  {
    "categories": [
      {
        "children": [],
        "id": "3",
        "image": undefined,
        "name": "Damen",
        "products": [],
        "showInMenu": true,
        "slug": undefined,
      },
    ],
    "id": "3",
    "longDescription": "",
    "name": "Leviz T-Shirt",
    "shortDescription": "",
    "slug": "LEV0031001002000",
    "variants": [
      {
        "attributes": undefined,
        "id": "34",
        "images": [
          {
            "url": "https://example/file/6074e8f1a0b1cd81885a1769e5d0cfa1?bg=F4F4F5&quality=75&trim=1&height=1067&width=800",
          },
        ],
        "listPrice": "€2,990.00",
        "salePrice": "€2,990.00",
        "sku": "LEV0031001002000_S",
      },
    ],
  },
  {
    "categories": [
      {
        "children": [],
        "id": "3",
        "image": undefined,
        "name": "Damen",
        "products": [],
        "showInMenu": true,
        "slug": undefined,
      },
    ],
    "id": "4",
    "longDescription": "",
    "name": "Leviz T-Shirt",
    "shortDescription": "",
    "slug": "LEV0074002000005",
    "variants": [
      {
        "attributes": undefined,
        "id": "31",
        "images": [
          {
            "url": "https://example/file/images/68bf124a0517bffaa5fe1dc7ac8707db.jpg?brightness=0.96&quality=75&trim=1&height=1067&width=800",
          },
        ],
        "listPrice": "€2,990.00",
        "salePrice": "€2,990.00",
        "sku": "LEV0074002000005_S",
      },
    ],
  },
]
`;

exports[`scayle integration getProducts by keyword 1`] = `
[
  {
    "categories": [
      {
        "children": [],
        "id": "3",
        "image": undefined,
        "name": "Damen",
        "products": [],
        "showInMenu": true,
        "slug": undefined,
      },
    ],
    "id": "1",
    "longDescription": "",
    "name": "Leviz T-Shirt",
    "shortDescription": "",
    "slug": "LEV0074002000005",
    "variants": [
      {
        "attributes": undefined,
        "id": "31",
        "images": [
          {
            "url": "https://example/file/images/68bf124a0517bffaa5fe1dc7ac8707db.jpg?brightness=0.96&quality=75&trim=1&height=1067&width=800",
          },
        ],
        "listPrice": "€2,990.00",
        "salePrice": "€2,990.00",
        "sku": "LEV0074002000005_S",
      },
    ],
  },
]
`;
